[package]
name = "async_book"
version = "0.1.0"
authors = ["modulitos <modulitos@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version ="0.3", features = [ "thread-pool"] }
tokio = { version = "0.2.21", features = ["macros", "blocking", "rt-threaded", "time"]}
